--- a/6.3.html
+++ b/6.3.html
@@ -45,22 +45,22 @@
             get a grade for all<br>
             courses and graduate<br>     
         <span class = "northwest">
-            <image style = "visibility: hidden; opacity: 0.5;" id = "northwest" height = "400" width = "400 " src = "image.jpg" alt = "Picture of me">
+            <image style = "visibility: hidden; opacity: 0.5;" id = "northwest" height = "400" width = "400 " src = "Images/Pic.jpg" alt = "Picture of me">
             <br/><br/><br/><br/><br/>
         </span>
 
         <span class = "northeast">
-            <image style = "visibility: hidden; opacity: 0.5;" id = "northeast" height = "400" width = "400 " src = "image.jpg" alt = "Picture of me">
+            <image style = "visibility: hidden; opacity: 0.5;" id = "northeast" height = "400" width = "400 " src = "Images/Pic.jpg" alt = "Picture of me">
             <br/><br/><br/><br/><br/>
         </span>
 
         <span class = "southeast">
-            <image style = "visibility: hidden; opacity: 0.5;" id = "southeast" height = "400" width = "400 " src = "image.jpg" alt = "Picture of me">
+            <image style = "visibility: hidden; opacity: 0.5;" id = "southeast" height = "400" width = "400 " src = "Images/Pic.jpg" alt = "Picture of me">
             <br/><br/><br/><br/><br/>
         </span>
 
         <span class = "southwest">
-            <image style = "visibility: hidden; opacity: 0.5;" id = "southwest" height = "400" width = "400 " src = "image.jpg" alt = "Picture of me">
+            <image style = "visibility: hidden; opacity: 0.5;" id = "southwest" height = "400" width = "400 " src = "Images/Pic.jpg" alt = "Picture of me">
             <br/><br/><br/><br/><br/>
         </span>
         </p>
@@ -74,5 +74,6 @@
                 <input type = "button"  value = "Southeast" onclick = "flipImage('southeast')" />
             </p>
         </form>
+        <a href="index.html"> Home </a>
   </body>
 </html>
