--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li> <a href="HW 1.xhtml"> Exercise 2.1 </a></li>
             <li> <a href="fibonacci.html"> Exercise 4.4</a></li>
             <li> <a href="Project/Main.xhtml"> Individual Project</a></li>
-            <li> <a href="Exercise 6.3.html"> Exercise 6.3 </a></li>
+            <li> <a href="6.3.html"> Exercise 6.3 </a></li>
         </ul>
     <hr />
  </body>
