--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li> <a href="Project/Main.xhtml"> Individual Project</a></li>
             <li> <a href="6.3.html"> Exercise 6.3 </a></li>
             <li> <a href="numbers.php"> Exercise 9.5 </a></li>
+            <li> <a href="Project.html">Group Project</a></li>
         </ul>
     <hr />
  </body>
